--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "./node_modules/nodemon/bin/nodemon.js --watch ./ -e js,html"
+    "watch": "./node_modules/nodemon/bin/nodemon.js --watch ./ -e js,html,scss"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "express": "^4.13.3",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
+    "node-sass-middleware": "^0.9.0",
     "swig": "^1.4.2"
   },
   "devDependencies": {
