--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/HackOutWest15/splore#readme",
   "dependencies": {
+    "autoprefixer": "^5.2.0",
     "body-parser": "^1.13.3",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "express-autoprefixer": "^3.3.0",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
     "node-sass-middleware": "^0.9.0",
+    "postcss": "^4.1.16",
     "swig": "^1.4.2"
   },
   "devDependencies": {
