--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "debug": "^2.2.0",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
