--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "express": "^4.13.3",
     "express-autoprefixer": "^3.3.0",
     "mongodb": "^2.0.40",
-    "monk": "^1.0.1",
     "node-sass-middleware": "^0.9.0",
     "postcss": "^4.1.16",
+    "promised-mongo": "^1.2.0",
     "querystring": "^0.2.0",
     "request": "^2.60.0",
     "spotify-web-api-node": "^2.1.0",
