--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "promised-mongo": "^1.2.0",
     "querystring": "^0.2.0",
     "request": "^2.60.0",
+    "smhi-node": "0.0.7",
     "spotify-web-api-node": "^2.1.0",
     "swig": "^1.4.2"
   },
